--- a/me-frontend/src/styles/global.scss
+++ b/me-frontend/src/styles/global.scss
@@ -1,6 +1,6 @@
-
-/*
-@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
-@import '../../node_modules/bootstrap-vue/dist/bootstrap-vue.css';
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
-*/
+.fa-icon {
+  width: auto;
+  height: 1em;
+  max-width: 100%;
+  max-height: 100%;
+}
